was going below due to wrap! fixed

--- a/index.css
+++ b/index.css
@@ -10,6 +10,6 @@ body {
     color:white;
     width: 45%;
 }
-button{
-    margin-bottom: 15px;
+html{
+     white-space: nowrap;
 }
